--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pari-ui",
-  "version": "0.4.0",
+  "version": "0.7.0",
   "description": "Pari Ui For React",
   "private": false,
   "main": "dist/index.js",
@@ -40,9 +40,11 @@
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-react": "^7.14.5",
+    "@halilbrhmtrn/react-analog-clock": "^2.1.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "analog-clock-react": "^1.3.0",
     "node-sass": "^5.0.0",
     "web-vitals": "^1.0.1"
   },
